--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>ExaInteface</artifactId>
     <version>1.0</version>
     <name>Interface</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.0</junit.version>
@@ -84,9 +83,16 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.4.0</version>
     </dependency>
+
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
